Creating parent template base.html and add bootstrap navbar.

--- a/main_app/templates/main_app/index.html
+++ b/main_app/templates/main_app/index.html
@@ -1,3 +1,9 @@
-<h1>Love words app's home page</h1>
+{% extends 'main_app/base.html' %}
 
-<h4>some description of the application.</h4>
+{% block page_header %}
+
+  <h1>Love words app's home page</h1>
+
+  <h4>some description of the application.</h4>
+
+{% endblock page_header %}
