--- a/main_app/templates/main_app/base.html
+++ b/main_app/templates/main_app/base.html
@@ -43,6 +43,12 @@
             </li>
           </ul>
         </div>
+        {% if user.is_authenticated %}
+          Hello, {{ user.username }}.
+          <a href="user_account:logout" class="btn btn-danger">Log out</a>
+        {% else %}
+          <a href="{% url 'user_account:login' %}">Log in</a>
+        {% endif %}
       </div>
     </nav>
 
