modifying user_profile.html

--- a/main_app/templates/main_app/user_profile.html
+++ b/main_app/templates/main_app/user_profile.html
@@ -6,3 +6,9 @@
   <h3>All informations about a user's couple life.</h3>
 
 {% endblock page_header %}
+
+{% block content %}
+
+
+
+{% endblock content %}
