Bug fix: Modifying new_profile.html.

--- a/main_app/templates/main_app/new_profile.html
+++ b/main_app/templates/main_app/new_profile.html
@@ -1,13 +1,13 @@
 {% extends "main_app/base.html" %}
 
-{% block page header %}
+{% block page_header %}
 
   <h1>Please fill informations about your couple in the form below.</h1>
 
-{% endblock page header %}
+{% endblock page_header %}
 
 {% block content %}
 
-  
+
 
 {% endblock content %}
