--- a/main_app/templates/main_app/new_profile.html
+++ b/main_app/templates/main_app/new_profile.html
@@ -1,13 +1,14 @@
-{% extends "main_app/base.html" %}
+{% extends 'main_app/base.html' %}
 
 {% block page_header %}
-
   <h1>Please fill informations about your couple in the form below.</h1>
-
-{% endblock page_header %}
+{% endblock %}
 
 {% block content %}
-
-
-
-{% endblock content %}
+  <h2>Create a New Profile</h2>
+  <form method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit" class="btn btn-primary">Save Profile</button>
+  </form>
+{% endblock %}
