--- a/main_app/templates/main_app/index.html
+++ b/main_app/templates/main_app/index.html
@@ -1,9 +1,10 @@
 {% extends 'main_app/base.html' %}
 
 {% block page_header %}
-
   <h1>Love words app's home page</h1>
 
   <h4>some description of the application.</h4>
-
 {% endblock page_header %}
+{% block content %}
+  <a href="{% url "main_app:new_profile" %}" class="btn btn-primary">Start be an awsome partner !</a>
+{% endblock content %}
