--- a/main_app/templates/main_app/base.html
+++ b/main_app/templates/main_app/base.html
@@ -22,7 +22,7 @@
               <a class="nav-link active" aria-current="page" href="{% url 'main_app:index' %}">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
+              <a class="nav-link" href="{% url 'main_app:show_profile' %}">Profile</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</a>
